[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnida"
version = "1.3.0"
description = "Transfer analysis data between Binary Ninja and IDA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "binja-test-mocks>=0.1.11",
  "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
