[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnida"
version = "1.3.0"
description = "Transfer analysis data between Binary Ninja and IDA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "binja-test-mocks>=0.1.11",
  "pytest>=7.0.0",
  "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "cli/tests"]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E402",  # imports not at top of file (plugin layout)
  "E501",  # line too long (legacy code)
  "F401",  # unused imports (plugin entrypoints)
  "F403",  # import * used (legacy plugin layout)
  "F405",  # names from star imports (legacy plugin layout)
  "F811",  # redefinition from imports (legacy code)
]
